--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" >
 <head>
   <meta charset="UTF-8">
-  <title>Crea Passwords</title>
+  <title>Generador de Passwords</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
